--- a/users/templates/users/points.html
+++ b/users/templates/users/points.html
@@ -28,12 +28,14 @@
 
                         <label class="small mb-1">Points Requested:</label>
                         {{ points_form.points_requested}}
+                        <hr>
+                        <label class="small mb-1">Notes:</label>
+                        {{ points_form.notes}}
                     </div>
                 </div>
             </div>
             <br><br>
-            <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
-            <button type="reset" class="btn btn-dark btn-lg">Reset</button>
+            <button type="submit" class="btn btn-dark btn-lg">Submit</button>
         </form>
     </div>
 {% endblock content %}
