--- a/users/templates/users/verifications.html
+++ b/users/templates/users/verifications.html
@@ -1,13 +1,13 @@
 {% extends "users/base.html" %}
-{% block title %}Profile Page{% endblock title %}
+{% block title %}Points Verification Page{% endblock title %}
 {% block content %}
     <div class="row my-3 p-3">
         <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
     </div>
-    {% if user_form.errors %}
+    {% if points_form.errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
             <div id="form_errors">
-                {% for key, value in user_form.errors.items %}
+                {% for key, value in sponsor_form.errors.items %}
                     <strong>{{ value }}</strong>
                 {% endfor %}
             </div>
@@ -22,23 +22,22 @@
             <div class="form-row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <label class="small mb-1">Username:</label>
-                            {{ user_form.username }}
-                        <label class="small mb-1">Email:</label>
-                            {{ user_form.email }}
+                        <hr>
+                        
+                        <label class="small mb-1">Points Requested:</label>
+                        {{ sponsor_form.points_requested}}
+                        <hr>
+                        <label class="small mb-1">Notes:</label>
+                        {{ sponsor_form.notes}}
+                        <label class="small mb-1">Notes:</label>
+                        {{ sponsor_form.points_approved}}
+
+                        {{sponsor_form.eventName}}
                     </div>
-                    <div class="form-group">
-                        <a href="{% url 'password_change' %}">Change Password</a>
-                        <hr>    
-                        <label class="small mb-1">Change Avatar:</label>
-                        {{ profile_form.avatar }}
-                    </div>
-                    <label class="small mb-1">Bio:</label> {{ profile_form.bio }}
                 </div>
             </div>
             <br><br>
-            <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
-            <button type="reset" class="btn btn-dark btn-lg">Reset</button>
+            <button type="submit" class="btn btn-dark btn-lg">Submit</button>
         </form>
     </div>
 {% endblock content %}
