added event code verification

--- a/users/templates/users/points.html
+++ b/users/templates/users/points.html
@@ -25,9 +25,12 @@
                         <hr>
                         <label class="small mb-1">Event:</label>
                         {{ points_form.event}}
-
+                        <br>
                         <label class="small mb-1">Points Requested:</label>
                         {{ points_form.points_requested}}
+                        <hr>
+                        <label class="small mb-1">Event Code: </label>
+                        {{points_form.e_code}}
                         <hr>
                         <label class="small mb-1">Notes:</label>
                         {{ points_form.notes}}
