--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -26,6 +26,8 @@
                 <div class="navbar-nav ml-auto">
                   {% if user.is_authenticated %}
                     <a href="{% url 'users-profile' %}" class="nav-item nav-link">Profile</a>
+                    <a href="{% url 'users-points' %}" class="nav-item nav-link">Point Submission</a>
+                    <a href="{% url 'users-verifications' %}" class="nav-item nav-link">Verifications</a>
                     <a href="{% url 'logout' %}" class="nav-item nav-link">Logout</a>
                   {% else %}
                     <a href="{% url 'login' %}" class="nav-item nav-link">Sign in</a>
