--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -4,9 +4,12 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome, {{user.first_name.title|default:'Guest'}}</h1><br><br>
         <h1>Forms Pending</h1>
+        {% if user.is_authenticated %}
+            <p>You have XYZ points submitted and ABC points pending.</p>
+
+        {% endif %}
         <p class="lead">
-            This is <b>user registration and login system</b> build with django which is
-            a Python-based free and open-source web framework that follows the model–template–views architectural pattern.
+            Sample Text
         </p>
         <hr class="my-4">
         <p class="lead">
